# Wuling-DevOps

./: .gitignore  CODEOWNERS  NOTICE  README.md  dev-plan.md  dev-server.ps1  dev-server.sh  flake.nix  go.mod  go.sum  memes.md  prod-deploy.ps1  prod-deploy.sh
.github/workflows/: ci.yml  frontend-check.yml  release.yml  rust-check.yml
api/: openapi.yaml
assets/: README.md  gen_logo.py
cmd/wuling-api/: main.go
cmd/wuling-migrate/: main.go
deploy/: Dockerfile  docker-compose.yml
deploy/production/: Caddyfile  Dockerfile.frontend  README.md  docker-compose.prod.yml  env.example  nginx-frontend.conf
docs/: RELEASE.md  auth.md  pipelines.md
frontend/: eslint.config.js  index.html  nasti.config.ts  package-lock.json  package.json  theme-clean.css  theme-green.css  theme-zixiaolabsvi.css  todo.md  tsconfig.json  vite-env.d.ts
frontend/public/: theme-init.js
frontend/scripts/: copy-public.mjs
frontend/src/: main.tsx
internal/apperr/: apperr.go
internal/applog/: log.go
internal/auth/: auth.go  auth_test.go  middleware.go  middleware_test.go  oat.go  roles.go  roles_test.go
internal/authhttp/: admin.go  avatar.go  avatar_test.go  handler.go  oauth_github.go  oauth_github_test.go  sshkeys.go
internal/autoscale/: aliyun.go  autoscale_test.go  aws.go  cloudinit.go  config.go  provider.go  proxmox.go  reconcile.go  vcenter.go
internal/config/: config.go
internal/db/: db.go  migrate.go
internal/git/: git.go  git_commit_test.go  git_stub.go  wuling_git.cpp  wuling_git.h
internal/githttp/: gzip.go  gzip_test.go  handler.go  handler_realgit_test.go  handler_test.go
internal/httpapi/: json.go  middleware.go
nix/: module.nix
runners/runner-clients/: Cargo.toml  README.md
runners/runner-clients/src/: api.rs  backend.rs  config.rs  executor.rs  main.rs
scripts/: dev.sh  smoke.sh
(+186 files in other folders)
