[package]
name = "wuling-runner-client"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Wuling DevOps CI runner client — registers with the control plane, long-polls for jobs, and executes them in a container runtime."

[[bin]]
name = "wuling-runner"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
bollard = "0.17"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
tar = "0.4"
bytes = "1"

# Unix-only: kill a step's whole process group on timeout (host execution).
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
opt-level = 2
